<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/practiceFragment"
        android:icon="@drawable/ic_practice"
        android:title="@string/nav_practice" />

    <item
        android:id="@+id/testCatalogFragment"
        android:icon="@drawable/ic_tests"
        android:title="@string/nav_tests" />

    <item
        android:id="@+id/progressFragment"
        android:icon="@drawable/ic_progress"
        android:title="@string/nav_progress" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>